--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
 
   http: ^0.12.2
   flutter_bloc: ^6.0.1
+  intl: ^0.16.1
 
   # iOS style icons.
   cupertino_icons: ^0.1.3
@@ -25,3 +26,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/icons/classes/
+    - assets/data/
